<resources>
    <string name="app_name">DailyYummies</string>
    <string name="settings_title">Settings</string>
    <string name="settings_my_home">My home</string>
    <string name="main_question">What would you like to eat today?</string>
    <string name="map_fragment_text">MAP HERE!</string>
    <string name="food_list">FOOD LIST HERE !</string>
    <string name="menu_list">We found these meals for you today</string>
    <string name="home_navbar_title">HOME</string>
    <string name="map_navbar_title">MAP</string>
    <string name="menus_navbar_title">MENUS</string>
    <string name="default_radius">Default range</string>
    <string name="expand_menus">Expand menus</string>
    <string name="homeWarning">Set default home in settings</string>
    <string name="mapWarning">or refresh and allow the location tracking</string>
    <string name="RangeLabel">Range</string>
    <string name="restaurant_info">Restaurant Info</string>
    <string name="check_all">Check all</string>
    <string name="uncheck_all">Uncheck all</string>
    <string name="metres">m</string>
    <string name="in_range">In range</string>
</resources>
