<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".map.MapFragment">


    <!--  0 - 2000 metrov  -->
    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-168dp" />

    <androidx.appcompat.widget.AppCompatSeekBar
        android:id="@+id/seekBar"
        android:layout_width="250dp"
        android:layout_height="15dp"
        android:layout_marginTop="60dp"
        android:max="2000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/rangeValue"
        android:layout_width="50dp"
        android:layout_height="20dp"
        android:layout_marginTop="60dp"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/seekBar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="50dp"
        android:layout_height="20dp"
        android:layout_marginTop="60dp"
        android:textSize="14sp"
        android:text="@string/RangeLabel"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/seekBar"/>

    <TextView
        android:id="@+id/map1Warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/homeWarning"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/map2Warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mapWarning"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/map1Warning" />

    <Button
        android:id="@+id/centerPosition"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginBottom="40dp"
        android:layout_marginRight="40dp"
        android:drawableLeft="@drawable/ic_location_center_black_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/map"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>